# uview

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pom.xml  pyproject.toml
.github/workflows/: build.yml  lints.yml  release.yml  tests.yml
docs/: README.md
examples/java/com/example/projectname/examples/: BasicUsage.java
scripts/: test-pre-commit.sh  test_makefile.sh
src/jmh/java/com/example/projectname/benchmarks/: AppBenchmark.java
src/main/java/com/example/projectname/: App.java
src/main/java/com/example/projectname/cli/: MainCommand.java
src/main/java/com/example/projectname/internal/: StringUtils.java
src/main/java/com/uview/: App.java
src/main/java/com/uview/core/: PackageManager.java  SettingsManager.java
src/main/java/com/uview/gui/: AssetViewerDialog.java  AssetViewerFrame.java  ButtonTabComponent.java  FileTypeTreeCellRenderer.java  IconManager.java  MainWindow.java  MetaEditorFrame.java  PackageViewPanel.java  SyntaxTextPanel.java  TreeModelBuilder.java
src/main/java/com/uview/gui/tree/: TreeEntry.java
src/main/java/com/uview/io/: PackageIO.java
src/main/java/com/uview/model/: UnityAsset.java  UnityPackage.java
src/main/resources/: logo_metadata.txt
src/main/resources/icons/: README.md
src/test/java/com/example/projectname/: AppTest.java
src/test/java/com/uview/core/: PackageManagerTest.java  SettingsManagerTest.java
src/test/java/com/uview/io/: PackageIOTest.java
src/test/java/com/uview/model/: UnityPackageTest.java
test_assets/: test_script.cs
(+29 files in other folders)
