[project]
name = "uview"
version = "0.1.0"
description = "Python environment for UView"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Hassan Abedi", email = "hassan.abedi.t@gmail.com" }
]

requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "mypy>=1.11.1",
    "ruff>=0.9.3",
    "pre-commit (>=4.2.0,<5.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
]
